--- a/Views/Home/models.cshtml
+++ b/Views/Home/models.cshtml
@@ -5,52 +5,52 @@
 <div class="bg"></div>
 <div class="models">
     <section class="section sedans">
-       <div class="stitch-2"></div>
+       <div class="stitch-2 d-none d-sm-block"></div>
         <div class="container px-5">
-            <div class="row my-5">
-                <div class="col-3">
+            <div class="row my-5 text-xs-center">
+                <div class="col-12 col-sm-3">
                   <h1 class="display-4">Sedans</h1>  
                 </div>
-                <div class="col-4"> 
+                <div class="col-12 col-sm-4"> 
                 <span class="h4 light">Ride comfortably an in style with Lexus' wide range of sedans</span>  </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <div class="car-specs-model mx-auto text-center">
+                    <div class="car-specs-model mx-auto text-center d-none d-md-block">
                         <ul class="list-inline">
                             <a href="/model-name">
-                                <li class="list-inline-item active" style="background-image: url('/images/is-slant.png')">
+                                <li class="list-inline-item is">
                                     <span>R601 900</span>
                                     <span>IS</span>
                                 </li>
                             </a>
                             <a href="">
-                                <li class="list-inline-item">
-                                    <span></span>
+                                <li class="list-inline-item es">
+                                    <span>R610 500</span>
                                     <span>ES</span>
                                 </li>
                             </a>
                             <a href="">
-                                <li class="list-inline-item" style="background-image: url('')">
-                                    <span></span>
+                                <li class="list-inline-item es-hybrid">
+                                   <span>R730 500</span>
                                     <span>ES</span>
                                 </li>
                             </a>
                             <a href="">
-                                <li class="list-inline-item" style="background-image: url('/images/empty.png')">
-                                    <span></span>
+                                <li class="list-inline-item gs">
+                                    <span>R890 900</span>
                                     <span>GS</span>
                                 </li>
                             </a>
                             <a href="">
-                                <li class="list-inline-item" style="background-image: url('/images/empty.png')">
-                                    <span></span>
+                                <li class="list-inline-item ls">
+                                   <span>R970 200</span>
                                     <span>LS</span>
                                 </li>
                             </a>
                             <a href="">
-                                <li class="list-inline-item" style="background-image: url('/images/empty.png')">
-                                    <span></span>
+                                <li class="list-inline-item ct">
+                                    <span>R1 710 500</span>
                                     <span>CT</span>
                                 </li>
                             </a>
@@ -66,37 +66,50 @@
         </div>
     </section>
     <section class="section suvs angle--both-left-left">
-       <div class="stitch-3"></div>
-       <div class="stitch-4"></div>
+       <div class="stitch-3 d-none d-sm-block"></div>
+       <div class="stitch-4 d-none d-sm-block"></div>
         <div class="container px-5">
-            <div class="row my-5">
-                <div class="col-3">
+            <div class="row my-5 text-xs-center">
+                <div class="col-12 col-sm-3">
                   <h1 class="display-4">SUVS</h1>  
                 </div>
-                <div class="col-4"> 
+                <div class="col-12 col-sm-4"> 
                 <span class="h4 light">When SUV crosses elegantly into the world of Lexus' luxury</span>  </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <div class="car-specs-model mx-auto text-center">
+                    <div class="car-specs-model mx-auto text-center d-none d-md-block">
                         <ul class="list-inline">
-                            <li class="list-inline-item" style="background-image: url('/images/empty.png')">
-                            <span></span>
-                            <span>NX</span>
-                            </li>
-                            <li class="list-inline-item active" style="background-image: url('/images/rx-slant.png')">
-                            <span>R906 900</span>
-                            <span>RX</span></li>
-                            <li class="list-inline-item" style="background-image: url('/images/empty.png')">
-                            <span></span>
-                            <span>RX</span></li>
-                            <li class="list-inline-item" style="background-image: url('/images/empty.png')">
-                            <span></span>
-                            <span>LX</span></li>
+                            
+                            <a href="">
+                                <li class="list-inline-item nx">
+                                    <span>R600 000</span>
+                                    <span>NX</span>
+                                </li>
+                            </a>
+                            
+                            <a href="">
+                                <li class="list-inline-item rx">
+                                    <span>R706 900</span>
+                                    <span>RX</span>
+                                </li>
+                            </a>
+                            <a href="">
+                                <li class="list-inline-item rx-hybrid">
+                                    <span>R806 900</span>
+                                    <span>RX</span>
+                                </li>
+                            </a>
+                            <a href="">
+                                <li class="list-inline-item lx">
+                                    <span>R906 900</span>
+                                    <span>LX</span>
+                                </li>
+                            </a>
                         </ul>    
                     </div> 
                     <div class="car-model-pic mx-auto">
-                      <img src="/images/rx-1.png" alt="" class="img-fluid">  
+                      <img src="/images/rx-1.png" alt="" class="img-fluid d-block">  
                       <img src="/images/rx-2.png" alt="" class="img-fluid">  
                       <img src="/images/rx-3.png" alt="" class="img-fluid">  
                     </div>
@@ -107,48 +120,55 @@
     
     <section class="section coupes text-white">
         <div class="container px-5">
-            <div class="stitch-5"><img src="/images/stitch-5.png" alt=""></div>
-            <div class="stitch-6"><img src="/images/stitch-6.png" alt=""></div>
-            <div class="row my-5">
-                <div class="col-3">
+            <div class="stitch-5 d-none d-sm-block"><img src="/images/stitch-5.png" alt=""></div>
+            <div class="stitch-6 d-none d-sm-block"><img src="/images/stitch-6.png" alt=""></div>
+            <div class="row my-5 text-xs-center">
+                <div class="col-12 col-sm-3">
                   <h1 class="display-4">Coupes</h1>  
                 </div>
-                <div class="col-4"> 
+                <div class="col-12 col-sm-4"> 
                     <span class="h4 light">Nothing else will ever come close to a Lexus Coupe</span> 
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <div class="car-specs-model mx-auto text-center">
+                    <div class="car-specs-model mx-auto text-center d-none d-md-block">
                         <ul class="list-inline">
-                            <li class="list-inline-item" style="background-image: url('/images/empty.png')">
-                            <span></span>
-                            <span>RC</span>
-                            </li>
-                            <li class="list-inline-item active" style="background-image: url('/images/lc-slant.png')">
-                            <span>R1 746 900</span>
-                            <span>LC</span></li>
+                            <a href="">
+                                <li class="list-inline-item rc">
+                                    <span>R 1 759 998</span>
+                                    <span>RC</span>
+                                </li>
+                            </a>
+                            <a href="">
+                                <li class="list-inline-item lc">
+                                    <span>R1 746 900</span>
+                                    <span>LC</span>
+                                </li>
+                            </a>
                         </ul>    
                     </div> 
                     <div class="car-model-pic mx-auto">
-                      <img src="/images/lc-1.png" alt="" class="img-fluid">  
-                      <img src="/images/lc-2.png" alt="" class="img-fluid">  
-                      <img src="/images/lc-3.png" alt="" class="img-fluid">  
+                      <img src="/images/lc-1.png" alt="" class="img-fluid d-inline d-block-md">  
+                      <img src="/images/lc-2.png" alt="" class="img-fluid d-inline d-block-md">  
+                      <img src="/images/lc-3.png" alt="" class="img-fluid d-inline d-block-md">  
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <section class="car-dealerships my-5">
-        <div class="stitch-7"></div>
+        <div class="stitch-7 d-none d-sm-block"></div>
         <div class="container">
-            <div class="row">
+            <div class="row text-xs-center">
                 <div class="row my-4">
-                     <div class="display-4">Lexus Dealerships</div>
+                     <div class="col">
+                         <div class="display-4">Lexus Dealerships</div>
+                     </div>
                 </div>
             </div>
             <div class="row mx-auto text-center my-5">
-                    <div class="col-4">
+                    <div class="col-12 col-sm-4">
                         <div class="card text-left">
                             <img src="/images/map.jpg" alt="" class="midrand-map">
                              <span>Find out more about the Midrand Dealership</span>
@@ -166,7 +186,7 @@
                             </div>
                         </div>               
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-sm-4">
                        <div class="card text-left">
                             <img src="/images/map.jpg" alt="" class="midrand-map">
                             <span>Find out more about the Kingsmead Dealership</span>
@@ -184,7 +204,7 @@
                             </div>
                         </div>   
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-sm-4">
                       <div class="card text-left">
                             <img src="/images/map.jpg" alt="" class="midrand-map">
                              <span>Find out more about the Lynwood Dealership</span>
@@ -206,7 +226,17 @@
         </div>
     </section>
 </div>
-    
+@section Scripts {
+    <script>
+    $(document).ready(function(){
+        $("list-inline-item").hover(function(){
+            $(this).css("background-color", "yellow");
+            }, function(){
+            $(this).css("background-color", "pink");
+        });
+    });
+    </script>
+}
     
 
 
