--- a/Views/Shared/footer.cshtml
+++ b/Views/Shared/footer.cshtml
@@ -57,10 +57,15 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-3">
-            <div class="col">
+        <div class="row mt-3 justify-content-end w-100">
+            <div class="col-10">
                 <img src="/images/bidvest-club-mccarthy-logo.png" alt="" height="50" class="mr-4">
                 <img src="/images/lexus-logo-2.png">
+            </div>
+            <div class="col">
+                <img src="images/app-store.png" alt="">
+                <img src="images/google-play.png" alt="">
+                <p class="text-white text-capitalize mt-2">&copy; 2018 Lexus South Africa</p>
             </div>
         </div>
     </div>
