--- a/wwwroot/scss/lexus.scss
+++ b/wwwroot/scss/lexus.scss
@@ -56,8 +56,11 @@ html,
 @import "bootstrap/mixins/slanted-edges-2";
 
 //Pages
+@import "pages/specials"; 
 @import "pages/home"; 
 @import "pages/pre-owned"; 
 @import "pages/models"; 
+
+
 
 
