--- a/Views/Home/specials.cshtml
+++ b/Views/Home/specials.cshtml
@@ -1,44 +1,65 @@
-@{
-    ViewData["Title"] = "Home Page2";
-}
-<div class="home-page">
-    <section class="section hero">
-                <div class="container">
-                   <div class="row my-5" style="height:400px">
-                       <div class="col">
-                           <h1 class="display-4"> Special Offers</h1>
-                        </div>
-                   </div>
-                </div>
-    </section> 
-    <section class="car-specials my-5">
+
+@{ ViewData["Title"] = "New Car Specials"; }
+
+   <div class="home-page">
+    <section class="section specials-hero angle--bottom-right">
         <div class="container">
-            <div class="row my-4">
+            <div class="row my-5" style="height:200px">
                 <div class="col">
-<!--                    <div class="h4 light">Exclusive deals of other similar models to the IS 200T EX</div>      -->
-                </div>  
+                    <img src="/images/bidvest-logo-white.png" alt="" height="50" class="my-4">
+                    <h1 class="display-4">@ViewBag.Title</h1>
+                </div>
             </div>
-            <div class="row mx-auto text-center">
-                <div class="col-4 car-special-item">
-                    <img src="/images/specials-1.jpg" alt="" class="img-fluid">
-                    <span class="">ES 300H EX 2.0 FWD (Hybrid)</span>
-                    <span class="">R670 700</span>
-                    <span class="">R28 000</span>
+        </div>
+    </section>
+    
+    <section class="car-specials mb-5">
+        <div class="container">
+            <div class="row mx-auto w-100-md-down">
+                <div class="col-12 col-md-6 col-lg-4 car-special-item">
+                    <a href="/specials-detail">
+                        <img src="/images/specials-1.jpg" alt="" class="img-fluid">
+                        <span class="">ES 300H EX 2.0 FWD (Hybrid)</span>
+                        <span class="">R670 700</span>
+                        <span class="">R28 000</span>
+                    </a>
                 </div>
-                <div class="col-4 car-special-item">
-                    <img src="/images/specials-2.jpg" alt="" class="img-fluid">
-                    <span class="">GS300EX (Auto)</span>
-                    <span class="">R770 700</span>
-                    <span class="">R30 000</span>
+                <div class="col-12 col-md-6 col-lg-4 car-special-item">
+                    <a href=""><img src="/images/specials-2.jpg" alt="" class="img-fluid">
+                        <span class="">GS300EX (Auto)</span>
+                        <span class="">R770 700</span>
+                        <span class="">R30 000</span>
+                    </a>
                 </div>
-                <div class="col-4 car-special-item">
-                    <img src="/images/specials-3.jpg" alt="" class="img-fluid">
-                    <span class="">NX 300 E</span>
-                    <span class="">R599 700</span>
-                    <span class="">R20 000</span>
+                <div class="col-12 col-md-6 col-lg-4 car-special-item">
+                    <a href=""><img src="/images/specials-3.jpg" alt="" class="img-fluid">
+                        <span class="">NX 300 E</span>
+                        <span class="">R599 700</span>
+                        <span class="">R20 000</span>
+                    </a>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 car-special-item">
+                    <a href=""><img src="/images/specials-1.jpg" alt="" class="img-fluid">
+                        <span class="">ES 300H EX 2.0 FWD (Hybrid)</span>
+                        <span class="">R670 700</span>
+                        <span class="">R28 000</span>
+                    </a>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 car-special-item">
+                    <a href=""><img src="/images/specials-2.jpg" alt="" class="img-fluid">
+                        <span class="">GS300EX (Auto)</span>
+                        <span class="">R770 700</span>
+                        <span class="">R30 000</span>
+                    </a>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 car-special-item">
+                    <a href=""><img src="/images/specials-3.jpg" alt="" class="img-fluid">
+                        <span class="">NX 300 E</span>
+                        <span class="">R599 700</span>
+                        <span class="">R20 000</span>
+                    </a>
                 </div>
             </div>
         </div>
     </section>
 </div>
-
