--- a/wwwroot/scss/pages/models.scss
+++ b/wwwroot/scss/pages/models.scss
@@ -12,31 +12,99 @@ body {
                 display: none;     
             }
             .list-inline-item {    
-                margin: 0px -2px;
+                margin: 1px -2px;
                 height: 320px;
                 width: 160px;
                 transform: skewX(-20deg);
-
-            &:hover { 
-                background:rgba(0, 0, 0, 0.18);
-                margin: 0px -2px;
-                color:white;        
-            }
-                
-            
-            &.active { 
-                transform: skewX(-20deg);
-                color:white;   
-            }
-            
                
-                span:nth-of-type(1){ 
+                &.is:hover {            
+                    background-image: url('/images/is-slant.png');
+                    span:nth-of-type(1){
+                        display: block;
+                    }
+                }  
+                &.es-hybrid:hover { 
+                    background-image: url('/images/lc-slant.png');
+                    span:nth-of-type(1){
+                        display: block;
+                    }
+                }
+                &.es:hover { 
+                    background-image: url('/images/rx-slant.png');
+                    span:nth-of-type(1){
+                        display: block;
+                    }
+                }
+                &.gs:hover { 
+                    background-image: url('/images/is-slant.png');
+                    span:nth-of-type(1){
+                        display: block;
+                    }
+                }
+                &.ls:hover { 
+                    background-image: url('/images/rx-slant.png');
+                    span:nth-of-type(1){
+                        display: block;
+                    }
+                }
+                &.ct:hover { 
+                    background-image: url('/images/lc-slant.png');
+                    span:nth-of-type(1){
+                        display: block;
+                    }
+                } 
+                &.nx:hover { 
+                    background-image: url('/images/rx-slant.png');
+                    span:nth-of-type(1){
+                        display: block;
+                    }
+                }
+                &.rx:hover { 
+                    background-image: url('/images/is-slant.png');
+                    span:nth-of-type(1){
+                        display: block;
+                    }
+                }
+                &.rx-hybrid:hover { 
+                    background-image: url('/images/rx-slant.png');
+                    span:nth-of-type(1){
+                        display: block;
+                    }
+                }
+                &.lx:hover { 
+                    background-image: url('/images/is-slant.png');
+                    span:nth-of-type(1){
+                        display: block;
+                    }
+                } 
+                &.rc:hover { 
+                    background-image: url('/images/is-slant.png');
+                    span:nth-of-type(1){
+                        display: block;
+                    }
+                }
+                &.lc:hover { 
+                    background-image: url('/images/rx-slant.png');
+                    span:nth-of-type(1){
+                        display: block;
+                    }
+                }
+
+                &:hover { 
+                    background:rgba(0, 0, 0, 0.18);
+                    margin: 0px -2px;
+                    color:white;        
+                }
+
+                span:nth-of-type(1){
+                    
                     font-weight:bold;
                     font-size:1.3em;
                     color:black;
                     margin-top:-55px;
                     display: block;
                     transform: skewX(20deg); 
+                    display:none;
                     &:before {
                         content:'From';
                         font-weight: normal;
@@ -65,25 +133,51 @@ body {
         margin-bottom: 200px;
         position: relative;
         width:100%;
-        img {display: inline-block;}
+        
+        @include media-breakpoint-down(sm) {
+            margin-top: 0;
+        }
+        
+        img { 
+            @include media-breakpoint-down(sm) {
+                display: block;
+                padding:30px 0;
+                border-bottom: 1px solid black;
+            }
+        }
+        
         img:nth-of-type(1) {
             position: absolute;
             top:-21px;
             left:-100px;
             z-index: 10;
-           
+            @include media-breakpoint-down(sm) {
+                position: static;
+                margin:20px 0;
+                &:before { 
+                content:'Hello';
+                }
+            }
         }
         img:nth-of-type(2) {
             position: absolute;
             top:0;
             left:268px;
             z-index: 9;
+            @include media-breakpoint-down(sm) {
+                display: block;
+                position: static;
+            }
         }   
         img:nth-of-type(3) {
             position: absolute;
             top:9px;
             left:590px;
             z-index: 8;
+            @include media-breakpoint-down(sm) {
+                display: block;
+                 position: static;
+            }
         }
     }
     .car-features { 
